css/vote.css
* {
  box-sizing: border-box
}

@keyframes fadeIn {
  from {
    opacity: 0
  }

  to {
    opacity: 1
  }
}

:root {
  --btn-bg-color: #5865f2;
  --btn-hover-bg-color: #4e56dd;
  --color-scheme: light dark;
  --dark-mode-bg-color: #111;
  --dark-mode-card-bg-color: #222;
  --dark-mode-input-bg-color: #333;
  --dark-mode-input-focus-bg-color: #444;
  --dark-mode-text-color: #fff;
  --light-mode-bg-color: #fff;
  --light-mode-card-bg-color: #f2f2f2;
  --light-mode-input-bg-color: #eee;
  --light-mode-input-focus-bg-color: #ddd;
  --light-mode-text-color: #111
}

::-webkit-scrollbar {
  display: none
}

body {
  -ms-overflow-style: none;
  background-color: var(--bg-color);
  color: var(--text-color);
  font-family: sans-serif;
  margin: 0;
  padding: 1rem;
  scrollbar-color: none
}

button {
  border: none;
  border-radius: .25rem;
  cursor: pointer;
  overflow: auto;
  padding: .5rem 1rem
}

.swal2-popup,
.swal2-title {
  background-color: var(--card-bg-color) !important;
  color: var(--text-color) !important
}

.swal2-confirm {
  background-color: var(--btn-bg-color) !important
}

.color-transition {
  transition: color .3s linear, background-color .3s linear
}

#header-container {
  background-color: var(--bg-color);
  border-radius: .25rem;
  box-shadow: 0 2px 4px #0000004d;
  display: flex;
  left: 0;
  padding: 1rem;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1
}

#header-container > h1 {
  cursor: pointer;
  margin: 0
}

#header-container button,
#header-container > input {
  margin-left: 1rem
}

.spacer {
  flex: 1
}

[class^='fa'] {
  background-color: transparent;
  color: var(--text-color);
  position: absolute;
  transform: translate(-50%, -50%)
}

#toggle-cards-display,
#toggle-color-scheme,
.card .manage-button {
  align-self: flex-start;
  background-color: transparent;
  border: 1rem;
  height: 39px;
  width: 39px
}

#toggle-cards-display::before,
#toggle-color-scheme::before {
  border-radius: .25rem;
  content: '';
  height: 30px;
  position: absolute;
  transform: translate(-50%, -50%);
  width: 30px
}

#search-box,
#login-button,
#feature-request-button {
  border-radius: .25rem;
  font-size: 1rem;
  height: 2.25rem;
  outline: none;
  padding: .5rem 1rem;
  transition: background-color .2s ease-in-out
}

#feature-request-overlay {
  animation: fadeIn .5s forwards;
  background-color: #00000080;
  display: none;
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1
}

#feature-request-modal {
  background-color: var(--bg-color);
  border-radius: .5rem;
  box-shadow: 0 0 .5rem #00000080;
  left: 50%;
  max-height: 80%;
  max-width: 80%;
  min-height: 50%;
  min-width: 50%;
  padding: 2rem;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%)
}

#feature-request-modal > h2 {
  margin-top: 0;
  padding-bottom: 1rem
}

#feature-request-modal > button:not(:hover) {
  background-color: inherit
}

#feature-request-modal > button {
  padding: 1rem;
  position: absolute;
  right: 1rem;
  top: 1rem
}

#feature-request-form {
  display: flex;
  flex-direction: column;
  justify-content: space-between
}

#feature-request-form > label {
  display: block;
  margin-bottom: .5rem
}

#feature-request-form > input,
#feature-request-form > textarea {
  background-color: var(--card-bg-color);
  border: none;
  border-radius: .25rem;
  color: var(--text-color);
  max-width: 100%;
  min-width: 100%;
  overflow: auto;
  padding: .5rem
}

#feature-request-form > textarea {
  max-height: 50vh;
  min-height: 15rem
}

#feature-request-form > .counter.limit-reached {
  color: #ff4136
}

#feature-request-form > .counter {
  color: grey;
  cursor: default;
  font-size: .8rem;
  margin-top: .2rem;
  text-align: right
}

#feature-request-form > button {
  align-self: flex-end;
  bottom: -.5rem;
  margin-top: .5rem;
  position: relative
}

#profile-container {
  margin-left: auto;
  margin-top: 0;
  min-width: 40px;
  position: relative
}

#profile-container-wrapper {
  background-color: #00000040;
  border-radius: .25rem;
  box-shadow: 0 2px 4px #0000004d;
  display: none;
  padding: .5rem;
  position: absolute;
  right: 1rem;
  top: 1rem;
  z-index: 2
}

#profile-container-wrapper > .username {
  color: #fff;
  font-size: 1rem;
  font-weight: 700;
  margin-bottom: .5rem
}

#profile-image {
  border-radius: 50%;
  cursor: pointer;
  height: 40px;
  margin-left: 1rem;
  width: 40px;
  z-index: 1000
}

#login-button,
#logout-button {
  display: inline-block;
  font-size: 1rem;
  text-decoration: none;
  transition: background-color .2s ease-in-out
}

.cards-container {
  column-gap: 1rem;
  display: flex;
  flex-wrap: wrap;
  transition: all .5s ease
}

.cards-container.cards-row-mode > .card {
  flex-basis: calc(50% - .5rem);
  transition: flex-basis .5s ease
}

.cards-container.cards-column-mode > .card {
  flex-basis: 100%;
  transition: flex-basis .5s ease
}

.card {
  animation: fadeIn 1s forwards;
  background-color: var(--card-bg-color);
  border-radius: .5rem;
  box-shadow: 0 0 .5rem #00000080;
  display: flex;
  flex-direction: column;
  flex-grow: 0;
  flex-shrink: 0;
  flex-wrap: wrap;
  justify-content: space-between;
  margin-bottom: 1rem;
  opacity: 0;
  overflow: hidden;
  position: relative
}

.card > h2 {
  font-size: 1.5rem;
  margin: 0;
  padding: 1rem
}

.card > p {
  line-height: 1.5;
  margin: 0;
  margin-bottom: 1rem;
  padding: 0 1rem
}

.card > .vote-buttons {
  align-items: center;
  display: flex;
  justify-content: flex-start;
  padding: 1rem;
  position: static
}

.vote-buttons > .vote-button {
  transition: background-color .2s ease-in-out
}

.vote-buttons > .vote-counter {
  font-size: 1.2rem;
  font-weight: 700;
  margin: 0 .5rem
}

.vote-buttons > #userId {
  bottom: 0;
  color: gray;
  cursor: pointer;
  font-size: .8rem;
  position: absolute;
  right: 1rem
}

.grey-hover:focus,
.grey-hover:hover,
.grey-hover:hover::before,
.grey-hover:focus::before {
  background-color: var(--input-focus-bg-color)
}

.grey-hover {
  background-color: var(--input-bg-color);
  border: none;
  color: var(--text-color)
}

.blue-button {
  background-color: var(--btn-bg-color);
  color: #fff
}

.blue-button:hover,
.blue-button:focus {
  background-color: var(--btn-hover-bg-color)
}

@media (max-width: 768px) {
  .header-container {
    flex-wrap: wrap;
    padding-top: .5rem
  }

  .header-container > h1 {
    font-size: 1.25rem
  }

  #toggle-cards-display {
    display: none
  }

  #search-box {
    margin-left: 0
  }

  #toggle-color-scheme {
    margin-left: .5rem;
    transform: scale(0.9)
  }

  #toggle-color-scheme > i {
    position: relative;
    top: 0
  }

  #search-box,
  #feature-request-button {
    max-width: 150px
  }

  .profile-container {
    margin-left: .5rem
  }

  #feature-request-modal {
    border-radius: 0;
    display: flex;
    flex-direction: column;
    height: 100%;
    max-height: none;
    max-width: none;
    padding: 1rem;
    padding-top: .5rem;
    width: 100%
  }

  #feature-request-modal > h2 {
    font-size: 1.25rem;
    padding-bottom: .5rem
  }

  #feature-request-modal > button {
    right: .25rem;
    top: .25rem
  }

  #feature-request-form {
    height: 100%
  }

  #feature-request-form > textarea {
    height: 100%;
    max-height: none;
    resize: none
  }

  #feature-request-form > #description-counter {
    margin-bottom: .5rem
  }

  #feature-request-form > button {
    bottom: 0;
    margin-top: 0
  }
}

